1.0.1:
- Display navigation bar in pages

1.0.0:
- Initial release